versioned_docs/version-1.0.21/04-visualization/01-panels.md
---
title: 面板
sidebar_label: 面板
---

# 4.1 面板

面板是 TDengine IDMP 所有可视化的基本构建单元。面板是一个独立的可视化组件——图表、仪表盘、表格或其他显示形式——绑定到特定元素的一个或多个属性。每个面板都属于一个元素，并从该元素的属性中获取数据。

本页涵盖所有面板类型共享的通用功能：浏览、创建、编辑、工具栏控件以及数据配置界面。各面板类型及其特定设置在后续章节中分别介绍。

## 4.1.1 面板选项卡

在资产树中导航到任意元素，点击**面板**选项卡即可访问其面板。

### 4.1.1.1 浏览面板

面板网格上方的工具栏提供三个控件：

- **分类：** 按分类标签过滤面板。从下拉菜单中选择一个分类，仅显示带有该标签的面板。默认为"全部"。
- **AI：** 开启或关闭 AI 推荐。启用后，AI 引擎会分析元素的属性，并根据数据类型和运营上下文推荐相关面板。再次点击可仅显示已保存的面板。
- **卡片/列表视图：** 在卡片视图（缩略图预览）和列表视图（带元数据的紧凑列表）之间切换。

工具栏右侧：

- **+（新建面板）：** 打开面板编辑器，从头创建新面板。
- **网格图标：** 调整卡片网格密度。
- **刷新：** 重新加载面板列表。

### 4.1.1.2 AI 推荐面板

当 AI 开关激活时，由**无问智推**技术驱动，系统会在已保存面板旁边生成面板推荐。每张推荐卡片显示预览和面板标题。您可以：

- 点击 **👍** 将建议标记为有用——这不会保存它。
- 点击 **👎** 忽略该建议。
- 点击建议上的 **⋮** → **生成**，将其保存为永久面板。
- 点击 **⋮** → **删除**，移除该建议。

列表末尾的 **+ 更多建议** 卡片可请求额外的 AI 生成建议。

在面板列表底部，有一个文本输入框，让您用自然语言描述面板："请告诉我您想要的面板，我会为您生成。"点击 **问我一下** 生成所描述的面板。

### 4.1.1.3 已保存面板

已保存面板以带有实时缩略图预览的卡片形式显示。将鼠标悬停在卡片上可显示 **⋮**（更多）菜单，提供以下操作：

| 操作 | 说明 |
|---|---|
| **查看** | 以全视图模式打开面板 |
| **编辑** | 打开面板编辑器 |
| **复制** | 在同一元素上创建面板的副本 |
| **转换为模板** | 将此面板的配置保存为面板模板 |
| **在新窗口中打开** | 在单独的浏览器窗口中打开面板 |
| **删除** | 永久删除该面板 |

## 4.1.2 创建面板

手动创建新面板：

1. 点击面板网格末尾的 **+ 新建面板** 卡片。
2. 弹出对话框询问您选择面板类型：**标准** 或 **组态**。
   - **标准：** 常规数据驱动面板（趋势图、柱状图、仪表盘等）。
   - **组态：** 用于构建自定义可视化显示的自由布局组态面板。
3. 选择类型后，面板编辑器立即以编辑模式打开。
4. 配置数据源、指标和可视化设置。
5. 点击**保存**保存面板。

要从 AI 推荐创建面板，点击任意推荐卡片上的 **⋮** → **生成**。

## 4.1.3 面板查看模式

在面板卡片上点击**查看**，可在全视图模式下打开面板。面板占据主内容区，左侧显示元素层级。

### 4.1.3.1 查看模式工具栏

每种面板类型的查看模式工具栏都包含以下控件：

| 控件 | 说明 |
|---|---|
| **返回列表** | 返回面板选项卡 |
| **编辑** | 打开面板编辑器 |
| **加入分组** | 将此面板加入一个或多个自定义分组以便快速访问 |
| **时间选择器** | 选择图表的时间范围（如过去 7 天）。点击下拉箭头可选择预设范围或自定义范围。 |
| **缩小** | 将时间范围扩展到下一级别 |
| **刷新** | 立即重新加载图表数据 |
| **自动刷新** | 设置自动刷新间隔（关闭、5 秒、10 秒、30 秒、1 分钟等） |
| **保存为图片** | 将当前图表下载为 PNG 图片 |
| **分享** | 生成指向此面板视图的限时分享链接 |
| **全屏** | 将面板扩展为填满浏览器窗口 |
| **在新窗口中打开** | 在单独的浏览器窗口中打开此面板 |
| **解读面板** | 打开此面板的 AI 生成解读报告 |
| **注解** | 打开注解面板，为此面板添加文本注解 |

特定面板类型的附加工具栏控件在各面板类型章节中单独说明。

## 4.1.4 面板编辑模式

在查看模式中点击**编辑**，或在面板卡片上点击 **⋮** → **编辑**，可打开面板编辑器。编辑器分为三个区域。

### 4.1.4.1 编辑模式工具栏

每种面板类型的编辑模式工具栏都包含以下控件：

| 控件 | 说明 |
|---|---|
| **返回列表** | 返回面板选项卡（提示保存或放弃更改） |
| **保存** | 保存对面板的所有更改 |
| **放弃** | 放弃更改并返回查看模式 |
| **时间选择器** | 选择预览时间范围 |
| **缩小** | 将预览时间范围扩展到下一级别 |
| **刷新** | 重新加载预览数据 |
| **自动刷新** | 为预览设置自动刷新间隔 |

特定面板类型的附加工具栏控件在各面板类型章节中单独说明。

### 4.1.4.2 左侧区域：数据源

左侧区域控制哪些数据可供面板使用。顶部的两个单选按钮决定数据源模式：**元素** 和 **子元素聚合**。

### 4.1.4.3 元素模式

面板从当前元素及其任意后代子元素中获取数据。左侧区域显示两个部分：

- **指标：** 属于当前元素本身的属性（时序指标）。
- **子元素：** 所有后代元素的可导航层级。展开树形结构可浏览到任意子元素并访问其属性。任意层级的属性均可添加到面板。

要添加属性，双击树形结构中的属性，将其添加到指标表。或者，将鼠标悬停在属性上显示 **⋮** 菜单，然后选择**添加到指标**或**添加到维度**。

### 4.1.4.4 子元素聚合模式

面板跨所选元素模板的所有子元素聚合数据。您不是导航到各个子元素，而是从下拉菜单中选择一个**元素模板**（例如"电表"或"水表"）。树形结构随即显示该元素模板的所有指标和标签，让您构建一个同时显示该模板下所有子元素聚合值或分组值的面板。

### 4.1.4.5 中间区域：预览与数据配置

中间区域的上方显示图表的实时预览，随您的修改即时更新。图表下方是用于导航的缩略图。

缩略图下方是数据配置区域。区域顶部提供一个切换按钮，用于在**指标配置**和**高级 SQL**之间切换，默认选中**指标配置**。点击该按钮行的空白处，可展开或收起当前配置块。

当系统正在执行查询并刷新预览数据时，当前按钮行右侧会在收起/展开图标左侧显示**正在运行中**提示。

### 4.1.4.6 指标

当切换按钮选中**指标配置**且配置块处于展开状态时，可通过结构化方式定义绘制在图表上的数据系列。标题行提供三个附加控件：

- **查看 SQL：** 显示从当前配置生成的 SQL 查询。
- **限制：** 设置返回记录数的上限。
- **滑动窗口：** 应用滑动窗口聚合。配置窗口大小和单位（s = 秒，m = 分钟，h = 小时，d = 天）。编辑图标打开完整的滑动窗口配置；垃圾桶图标将其删除。

指标表中的每一行代表一个数据系列：

| 列 | 说明 |
|---|---|
| **名称** | 此系列在图表图例中的显示标签 |
| **表达式** | 聚合表达式（如 `avg(attribute)`、`max(attribute)`） |
| **计量单位** | 显示的计量单位。留空则使用属性配置的单位。 |
| **过滤条件** | 应用于此系列的可选过滤条件 |
| **时间偏移** | 通过时间量偏移此系列，用于历史对比叠加。输入数字并选择单位。 |
| **预测** | 此系列的 AI 预测配置。设为"无"则不预测，或配置预测模型。 |
| **排序** | 查询结果的排序顺序 |

使用每行末尾的操作图标来编辑或删除指标。

### 4.1.4.7 维度

维度部分定义聚合查询的分组维度。当需要按分类字段对数据进行分组时使用（类似于 SQL GROUP BY）。每个维度行包含：

| 列 | 说明 |
|---|---|
| **名称** | 此维度的显示标签 |
| **表达式** | 分组表达式 |
| **过滤条件** | 此维度的过滤条件 |
| **分组** | 是否将此维度包含在 GROUP BY 中 |
| **排序** | 排序顺序 |

### 4.1.4.8 高级 SQL 模式

当切换按钮选中**高级 SQL**且配置块处于展开状态时，可进入原始 SQL 编辑器。在高级模式下，您可以添加多个 SQL 查询——每个查询显示为一个独立的查询块——所有结果一起显示在同一个面板中。

每个查询块都有一个**查询类型**选择器：

| 查询类型 | 说明 |
|---|---|
| **TDengine** | 使用与当前元素或元素模板关联的 TDengine 连接执行 |
| **事件** | 查询系统生成的事件 |

输入完整的 SQL 语句后，点击**验证**检查其是否合法可执行。成功时按钮旁边会显示绿色图标。验证成功后，可使用两个附加选择器：

- **时间列：** 选择将哪个结果列用作时间轴。取消选择则将查询结果视为非时序数据。
- **维度：** 选择一个或多个结果列作为维度（分组）列而非指标值。

### 4.1.4.9 模板变量

高级 SQL 支持四个内置模板变量，在查询时会被替换：

| 变量 | 替换内容 |
|---|---|
| `${FROM_TIME}` | 面板时间选择器的开始时间 |
| `${TO_TIME}` | 面板时间选择器的结束时间 |
| `${Element#fullVirtualTable}` | 当前元素的完整虚拟表名 |
| `${Element#name}` | 当前元素的名称 |

:::tip
四个变量在 SQL 编辑器中均支持自动补全：输入 `FROM_TIME`、`TO_TIME` 或 `ELEMENT`，编辑器会自动补全为完整变量语法。`${FROM_TIME}` 和 `${TO_TIME}` 会根据上下文自动添加或省略引号——无需手动添加。`${Element#fullVirtualTable}` 会自动处理反引号。`${Element#name}` 会被解析为纯字符串——在字符串比较中使用时需在其周围添加单引号。
:::

每个查询块的附加控件：

- **格式化：** 点击格式化图标，对 SQL 语句进行自动格式化。
- **启用/禁用：** 在不删除的情况下切换查询块的开关状态，适用于临时从面板中排除某个查询。

### 4.1.4.10 右侧区域：可视化设置

右侧区域包含图表的所有可视化配置。顶部是**面板类型选择器**——一个列出所有可用面板类型的下拉菜单。更改类型会用新的可视化方式重新渲染预览，同时保留数据配置。

可视化设置被组织为可折叠部分。以下三个部分对每种面板类型都会显示：

### 4.1.4.11 通用

| 字段 | 说明 |
|---|---|
| **名称** | 显示在图表顶部的面板标题 |
| **描述** | 可选描述，在悬停或导出时显示 |
| **分类** | 一个或多个用于在面板列表中组织和过滤面板的标签 |

### 4.1.4.12 数据链接

定义附加到数据点的可点击链接。每个链接指定一个标签和一个 URL，URL 可以包含引用数据点时间或值的模板变量。在图表中点击数据点会打开配置的链接。

### 4.1.4.13 定时报告

在此面板上配置定时报告发送规则。详情请参阅[定时报告](./06-scheduled-reports.md)。

其他设置部分——图形、坐标轴、边界值、图例等——是特定于面板类型的，在各面板类型的章节中进行说明。

## 4.1.5 注解

注解让用户为面板附加文字备注——例如标记异常原因、记录维护操作或为团队成员留下上下文说明。

### 添加注解

1. 在面板查看模式中，点击工具栏的 **注解** 按钮打开注解面板。
2. 点击底部的 **+** 按钮展开输入框。
3. 输入注解内容（支持 Markdown 格式）。
4. 按 **Enter** 提交，按 **Shift+Enter** 换行。

### 编辑注解

将鼠标悬停在注解上，点击 **编辑** 图标。修改内容后点击 **保存** 按钮保存更改，或点击 **取消** 放弃修改。

### 删除注解

将鼠标悬停在注解上，点击 **删除** 图标，在确认对话框中确认后删除。

## 4.1.6 面板管理

**分类** 是在通用设置中分配给面板的自由文本标签。它们显示在面板选项卡的"分类"过滤下拉菜单中，让用户按功能或系统区域快速查找面板（如电气、机械、质量）。

**分组** 将面板加入自定义命名分组以便快速访问。已加入分组的面板可通过全局仪表板视图左侧边栏中的**面板分组**直接访问。

**转换为模板** 将面板的配置保存为可复用的面板模板。保存到模板库后，相同的面板结构可应用于其他同类型元素，无需重新配置。有关模板管理的详情，请参阅[面板与仪表板模板](./07-panel-dashboard-templates.md)。
